Bug 446765 - Screen-shots shown in the preview of grid task switcher are blurred making them look like low quality jpeg
Summary: Screen-shots shown in the preview of grid task switcher are blurred making th...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-12-10 04:21 UTC by Raghavendra kamath
Modified: 2024-01-22 08:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.93.0
Sentry Crash Report:


Attachments
screenshot showing the preview with blurred images (674.65 KB, image/png)
2021-12-10 04:21 UTC, Raghavendra kamath
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2021-12-10 04:21:44 UTC
Created attachment 144415 [details]
screenshot showing the preview with blurred images

SUMMARY
The screenshots of applications shown in the preview of grid based task switched are blurred. I understand these are just suggestive images, but since they are blurred and look like have artefacts from bad scaling, they give the impression that a low quality jpg is used.
it would be good to have more clear images.

STEPS TO REPRODUCE
1. Go to system settings and search for task switcher.
2. Choose grid dropdown from the list of task switcher in the resulting page
3. Click on the image icon to see the preview of grid task switcher

I am attaching a screenshot of the preview.
Comment 1 Bug Janitor Service 2024-01-14 00:00:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4915
Comment 2 Ismael Asensio 2024-01-21 12:13:08 UTC
Git commit efde6c8e9e4148ac82824ad38305953c6135e417 by Ismael Asensio.
Committed on 21/01/2024 at 12:47.
Pushed by iasensio into branch 'master'.

kcms/tabbox: Use higher resolution thumbnails for previews

Replace the hardcoded thumbnails which have a low resolution for
current screen standards (~300x200), with higher resolution ones
(~1200x800).

Also set the new 6.0 wallpaper as the fallback desktop thumbnail
FIXED-IN: 5.93.0

M  +1    -1    src/kcms/tabbox/CMakeLists.txt
M  +2    -2    src/kcms/tabbox/thumbnailitem.cpp
M  +-    --    src/kcms/tabbox/thumbnails/desktop.png
M  +-    --    src/kcms/tabbox/thumbnails/dolphin.png
A  +-    --    src/kcms/tabbox/thumbnails/falkon.png
M  +-    --    src/kcms/tabbox/thumbnails/kmail.png
D  +-    --    src/kcms/tabbox/thumbnails/konqueror.png
M  +-    --    src/kcms/tabbox/thumbnails/systemsettings.png

https://invent.kde.org/plasma/kwin/-/commit/efde6c8e9e4148ac82824ad38305953c6135e417
Comment 3 Vlad Zahorodnii 2024-01-22 08:41:34 UTC
Git commit ab4264a6df7c22d0868289a0110819c5dce41e4c by Vlad Zahorodnii, on behalf of Ismael Asensio.
Committed on 22/01/2024 at 09:41.
Pushed by vladz into branch 'Plasma/6.0'.

kcms/tabbox: Use higher resolution thumbnails for previews

Replace the hardcoded thumbnails which have a low resolution for
current screen standards (~300x200), with higher resolution ones
(~1200x800).

Also set the new 6.0 wallpaper as the fallback desktop thumbnail
FIXED-IN: 5.93.0


(cherry picked from commit efde6c8e9e4148ac82824ad38305953c6135e417)

M  +1    -1    src/kcms/tabbox/CMakeLists.txt
M  +2    -2    src/kcms/tabbox/thumbnailitem.cpp
M  +-    --    src/kcms/tabbox/thumbnails/desktop.png
M  +-    --    src/kcms/tabbox/thumbnails/dolphin.png
A  +-    --    src/kcms/tabbox/thumbnails/falkon.png
M  +-    --    src/kcms/tabbox/thumbnails/kmail.png
D  +-    --    src/kcms/tabbox/thumbnails/konqueror.png
M  +-    --    src/kcms/tabbox/thumbnails/systemsettings.png

https://invent.kde.org/plasma/kwin/-/commit/ab4264a6df7c22d0868289a0110819c5dce41e4c